--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-weight: var(--font-regular);
 }
 
 .header-menu {
@@ -43,11 +44,17 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
-main {
+.main {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
   background: var(--primary-color);
   color: var(--font-secondary-color);
+  font-weight: var(--font-bold);
+  text-align: center;
+}
+
+.main-title span {
+  display: block;
 }
