--- a/styles/main.css
+++ b/styles/main.css
@@ -14,13 +14,14 @@
   font-family: "Rubik", sans-serif;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+.header {
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  z-index: 999;
 }
 
-.header {
+.header-content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,7 +49,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  height: 100vh;
   background: var(--primary-color);
   color: var(--font-secondary-color);
   font-weight: var(--font-bold);
@@ -57,4 +58,7 @@
 
 .main-title span {
   display: block;
+}
+
+@media all and (min-width: 768px) {
 }
