--- a/styles/main.css
+++ b/styles/main.css
@@ -15,21 +15,19 @@
 }
 
 .header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: var(--font-regular);
   position: fixed;
   width: 100%;
   background-color: white;
   z-index: 999;
 }
 
-.header-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-weight: var(--font-regular);
-}
-
 .header-menu {
   margin-bottom: 13px;
+  font-size: 16px;
 }
 
 .header-menu-items {
@@ -52,6 +50,7 @@
   height: 100vh;
   background: var(--primary-color);
   color: var(--font-secondary-color);
+  font-size: 30px;
   font-weight: var(--font-bold);
   text-align: center;
 }
@@ -61,4 +60,19 @@
 }
 
 @media all and (min-width: 768px) {
+  .header {
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .header-menu {
+    margin-bottom: 0;
+    font-size: 16px;
+  }
+
+  .main {
+    font-size: 40px;
+  }
 }
