--- a/styles/main.css
+++ b/styles/main.css
@@ -10,19 +10,26 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  list-style-type: none;
   font-family: "Rubik", sans-serif;
 }
 
+.wrapper {
+  max-width: 1200px;
+  margin: auto;
+}
+
 .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-weight: var(--font-regular);
   position: fixed;
   width: 100%;
   background-color: white;
   z-index: 999;
+}
+
+.header-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: var(--font-regular);
 }
 
 .header-menu {
@@ -32,6 +39,7 @@
 
 .header-menu-items {
   display: flex;
+  list-style-type: none;
 }
 
 .header-menu-items :last-child {
@@ -60,7 +68,7 @@
 }
 
 @media all and (min-width: 768px) {
-  .header {
+  .header-content {
     flex-direction: row;
     justify-content: space-between;
     padding-left: 30px;
