--- a/styles/main.css
+++ b/styles/main.css
@@ -20,9 +20,10 @@
 
 .header {
   position: fixed;
+  top: 0;
+  z-index: 999;
   width: 100%;
   background-color: white;
-  z-index: 999;
 }
 
 .header-content {
